public class CategoriaSensore {
}
