public class Sensore extends Dispositivo {
}
