package domotix.model.bean.regole;

/**
 * Enum che rappresenta i possibili stati in cui si puo' trovare una regola
 * @author andrea
 */
public enum StatoRegola {
    ATTIVA, SOSPESA, DISATTIVA;
}
