@startuml

title __DOMOTIX > MODEL > BEAN's Class Diagram__\n

namespace src.domotix.model {
    namespace util {
    }

    namespace bean {
        class src.domotix.model.bean.UnitaImmobiliare {
        }

        namespace device {
            class src.domotix.model.bean.device.Attuatore {
            }

            class src.domotix.model.bean.device.CategoriaAttuatore {
            }

            class src.domotix.model.bean.device.CategoriaSensore {
            }

            abstract class src.domotix.model.bean.device.Dispositivo {
            }

            class src.domotix.model.bean.device.Modalita {
            }

            class src.domotix.model.bean.device.Parametro {
            }

            class src.domotix.model.bean.device.Sensore {
            }

            class src.domotix.model.bean.device.InfoRilevabile {
            }

            class src.domotix.model.bean.device.SensoreOrologio {
            }
        }

        namespace system {
            class src.domotix.model.bean.system.Artefatto {
              }

              interface src.domotix.model.bean.system.Azionabile {
              }

              interface src.domotix.model.bean.system.Osservabile {
              }

              abstract class src.domotix.model.bean.system.Sistema {
              }

              class src.domotix.model.bean.system.Stanza {
              }
        }

        namespace regole {
            class src.domotix.model.bean.regole.Regola {
            }

            enum src.domotix.model.bean.regole.StatoRegola {
            }

            class src.domotix.model.bean.regole.Antecedente {
            }

            class src.domotix.model.bean.regole.Condizione {
            }

            interface src.domotix.model.bean.regole.InfoSensoriale {
            }

            class src.domotix.model.bean.regole.InfoCostante {
            }

            class src.domotix.model.bean.regole.InfoTemporale {
            }

            class src.domotix.model.bean.regole.InfoVariabile {
            }

            class src.domotix.model.bean.regole.Conseguente {
            }

            class src.domotix.model.bean.regole.Azione {
            }
        }
    }
}

src.domotix.model.bean.device.Attuatore -up-|> src.domotix.model.bean.device.Dispositivo
src.domotix.model.bean.device.Attuatore "*" o-- "1" src.domotix.model.bean.device.CategoriaAttuatore : categoria
src.domotix.model.bean.device.Attuatore "*" o-- "1" src.domotix.model.bean.device.Modalita : modoOp
src.domotix.model.bean.device.CategoriaAttuatore "*" o-- "1" src.domotix.model.bean.device.Modalita : modalita
src.domotix.model.bean.device.Modalita "*" o-- "1" src.domotix.model.bean.device.Parametro : parametro
src.domotix.model.bean.device.Sensore -up-|> src.domotix.model.bean.device.Dispositivo
src.domotix.model.bean.device.Sensore "*" o-- "1" src.domotix.model.bean.device.CategoriaSensore : categoria
src.domotix.model.bean.device.CategoriaSensore "*" o-- "1" src.domotix.model.bean.device.InfoRilevabile : informazione rilevabile
src.domotix.model.bean.device.SensoreOrologio -up-|> src.domotix.model.bean.device.Sensore

src.domotix.model.bean.system.Artefatto -up-|> src.domotix.model.bean.system.Sistema
src.domotix.model.bean.system.Sistema .up.|> src.domotix.model.bean.system.Azionabile
src.domotix.model.bean.system.Sistema .up.|> src.domotix.model.bean.system.Osservabile
src.domotix.model.bean.system.Sistema "1" o-- "1" src.domotix.model.util.ElencoDispositivi : attuatori
src.domotix.model.bean.system.Sistema "1" o-- "1" src.domotix.model.util.ElencoDispositivi : sensori
src.domotix.model.bean.system.Stanza -up-|> src.domotix.model.bean.system.Sistema
src.domotix.model.bean.system.Stanza "1" o-- "*" src.domotix.model.bean.system.Artefatto : artefatti
src.domotix.model.bean.UnitaImmobiliare "*" o-- "1" src.domotix.model.bean.system.Stanza : stanze
src.domotix.model.bean.UnitaImmobiliare "*" o-- "1" src.domotix.model.bean.regole.Regola : regole

src.domotix.model.bean.regole.Antecedente o-- src.domotix.model.bean.regole.Condizione : condizione
src.domotix.model.bean.regole.Antecedente o-- src.domotix.model.bean.regole.Antecedente : prossimoAntecedente
src.domotix.model.bean.regole.Azione o-- src.domotix.model.bean.device.Attuatore : attuatore
src.domotix.model.bean.regole.Azione o-- src.domotix.model.bean.device.Modalita : modalita
src.domotix.model.bean.regole.Condizione o-- src.domotix.model.bean.regole.InfoSensoriale : destra
src.domotix.model.bean.regole.Condizione o-- src.domotix.model.bean.regole.InfoSensoriale : sinistra
src.domotix.model.bean.regole.InfoCostante .up.|> src.domotix.model.bean.regole.InfoSensoriale
src.domotix.model.bean.regole.InfoVariabile .up.|> src.domotix.model.bean.regole.InfoSensoriale
src.domotix.model.bean.regole.InfoTemporale .up.|> src.domotix.model.bean.regole.InfoSensoriale
src.domotix.model.bean.regole.InfoVariabile o-- src.domotix.model.bean.device.Sensore : sensore
src.domotix.model.bean.regole.Regola o-- src.domotix.model.bean.regole.Antecedente : antecedente
src.domotix.model.bean.regole.Regola o-- src.domotix.model.bean.regole.Conseguente : conseguente
src.domotix.model.bean.regole.Regola o-- src.domotix.model.bean.regole.StatoRegola : stato

@enduml
